--- a/templates/BackOffice/User/index.html.twig
+++ b/templates/BackOffice/User/index.html.twig
@@ -20,7 +20,7 @@
                         </div><!--end col-->
                     </div><!--end row-->
                 </div>
-                {% include 'partials/research.html.twig' %}
+                {# {% include 'partials/research.html.twig' %} #}
                 <table class="table table-striped" id="table">
                     <thead>
                     <tr>
