--- a/templates/BackOffice/Role/index.html.twig
+++ b/templates/BackOffice/Role/index.html.twig
@@ -26,7 +26,7 @@
                         </div>
                     </div><!--end row-->
                 </div>
-                {% include 'partials/research.html.twig' %}
+                {# {% include 'partials/research.html.twig' %} #}
                 <table class="table table-striped" id="table">
                     <thead>
                     <tr>
